# fast-scaffold

./: .gitignore  README.md  pyproject.toml
src/fast_scaffold/: cli.py  generator.py
src/fast_scaffold/commands/: project.py
src/fast_scaffold/templates/project/: README.md.mako  pyproject.toml.mako
src/fast_scaffold/templates/project/app/: main.py.mako
